# ORT

./: README.md  README.zh-CN.md  inspect_inputs.py  run_ort.sh  run_ort_dlrm.py  run_ort_dlrm_branch_parallel.py  run_ort_sweep.sh  run_ort_sweep_extensible.sh
concorde/: README.md  build_binary_trace_backend.sh  collect_concorde_rows.py  fuse_concorde_with_dataset.py  plot_concorde_cdfs.py  run_binary_trace_backend.sh  run_concorde_sweep.py  run_concorde_trace_analysis.py  run_native_concorde_analyzer.sh  sync_concorde_config.py  trace_stream_parser.py
concorde/config/: kunpeng920_gem5.yaml
concorde/native/: CMakeLists.txt  concorde_native_analyzer.cpp  drmemtrace_pseudoview.cpp
concorde/src/: ML_model.py  __init__.py  analysis.py  bandwidth.py  branch_prediction.py  cache.py  config.py  feature_extraction.py  instruction.py  memory_state.py  rob_model.py  trace_analyse_origin.py  trace_parser.py  utils.py
dlrm_onnx/: dlrm_s_pytorch.onnx  dlrm_s_pytorch.onnx.cann_patched.onnx  dlrm_s_pytorch.onnx.cann_patched.onnx.loop_to_gather.onnx  dlrm_s_pytorch.onnx.loop_to_gather.onnx
dynamorio_tracing/: extract_trace_features.py  run_build_op_binaries.sh  run_drrio_all_ops.sh  run_gem5_all_ops.sh  run_gem5_all_ops_parallel.sh  run_host_all_ops.sh  run_per_op_trace.sh  test_one_op.sh
dynamorio_tracing/scripts/: analyze_op_traces.py  generate_op_binaries.py  ort_per_op_trace.py  single_op_runner.py
features/: README.md
model/: README.md  build_operator_dataset.py  feature_utils.py  gem5_utils.py  hardware_utils.py  model_utils.py  run_collect_gem5_labels.sh  run_train_operator_models.sh  sync_kunpeng920_profile.py  train_operator_model.py
model/hardware_profiles/: kunpeng920_gem5.yaml
onnx_operator_analysis/: build_training_features.py  extract_cpu_thread_usage.py  select_feature_subset.py  visualize_ort_profile_timeline.py
